src/test/deca/context/invalid/self/overrideReturn.deca
class A {
    int method(){}
}

class B extends A {
    void method(){}
}